# TradingAgents

./: .env.enterprise.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_REVIEW.txt  Dockerfile  Dockerfile.api  Dockerfile.app  IMPLEMENTATION_SUMMARY.md  LMSTUDIO.md  OPENCLAW_INTEGRATION.md  OPENCLAW_QUICK_START.md  OPTIONS_INTEGRATION_SUMMARY.md  README.md  SOUL.md  agent.yaml  alembic.ini  auth.py  benchmark_parallel.py  bot_listener.py  docker-compose.yml  examples_openclaw.py  flint-shadow.env.example  fly.toml  main.py  mkdocs.yml  notify.py  portfolio_advisor.py  prompt.txt  pyproject.toml  requirements.txt  run_ollama.py  scheduler.py  scratch_test.py  test_options_integration.py  ticker_resolver.py  user_prefs.py  (+3 more)
.claude/: run_missing_today.sh  settings.json  settings.local.json  skill.md
.claude/commands/: run-missing.md
.github/workflows/: auto-merge.yml  ci.yml  pages.yml
Architecture/: TradingAgentsFlintShadow.yaml  draw-diagrams.sh
alembic/: env.py
alembic/versions/: 20260430_0001_create_shadow_run_tables.py  20260501_0002_create_evaluation_observability_tables.py  20260505_0003_create_shadow_run_precedents.py
api/: completed_requests.html  db.py  main.py  schemas.py  vault.py  worker.py
back_test/: __init__.py  calendar.py  compare_benchmark.py  engine.py  metrics.py  optimize_policy.py  policy_config.py  run_backtest.py
cli/: announcements.py  backtester.py  deepdive.py  forge.py  main.py  models.py  preferences.py  report_headings.py  stats_handler.py  tui.py  tui.tcss  utils.py
dashboard/: __init__.py  advanced.py  app.py  queries.py  simple.py
docs/: HEDGE_PLATFORM_SPEC.md  LOCAL_MODELS.md  WEBUI_SPEC.md  _config.yml  hedge-platform.excalidraw  index.md  openai-oauth.md
docs/AAPL/: index.md
docs/ADI/: index.md
docs/ALAB/: index.md
docs/ALAB_20260531_161248-opus-4-7/: complete_report.md
docs/ALAB_20260531_claude-opus-4-7_20260531_174032/: complete_report.md
docs/AMAT/: index.md
docs/AMD/: index.md
docs/AMD_20260531_claude-opus-4-7_20260531_174107/: complete_report.md
docs/AMZN/: index.md
docs/ANET/: index.md
docs/ARM/: index.md
docs/ARM_20260531_claude-opus-4-7_20260531_174018/: complete_report.md
docs/ASML/: index.md
docs/AVGO/: index.md
docs/AVGO_20260531_claude-opus-4-7_20260531_174055/: complete_report.md
docs/BABA/: index.md
docs/BABA_20260531_claude-opus-4-7_20260531_174135/: complete_report.md
docs/COIN/: index.md
docs/CRDO/: index.md
docs/CRDO_20260531_claude-opus-4-7_20260531_174125/: complete_report.md
docs/CRM/: index.md
docs/CRM_20260531_claude-opus-4-7_20260531_174129/: complete_report.md
docs/CRWD/: index.md
docs/DELL/: index.md
docs/GOOGL/: index.md
docs/HPE/: index.md
docs/INTC/: index.md
docs/INTC_20260531_claude-opus-4-7_20260531_174111/: complete_report.md
docs/LLY/: index.md
docs/LLY_20260531_claude-opus-4-7_20260531_174045/: complete_report.md
docs/LRCX/: index.md
docs/META/: index.md
docs/META_20260531_claude-opus-4-7_20260531_174042/: complete_report.md
docs/MRVL/: index.md
docs/MRVL_20260531_161242-opus-4-7/: complete_report.md
docs/MRVL_20260531_claude-opus-4-7_20260531_174037/: complete_report.md
docs/MSFT/: index.md
docs/MSFT_20260531_claude-opus-4-7_20260531_174114/: complete_report.md
docs/MU/: index.md
docs/MU_20260531_161235-opus-4-7/: complete_report.md
docs/MU_20260531_claude-opus-4-7_20260531_174028/: complete_report.md
docs/NFLX/: index.md
docs/NFLX_20260531_claude-opus-4-7_20260531_174048/: complete_report.md
docs/NKE/: index.md
global-screener/: README.md  monster_stock_screener.py  package-lock.json  package.json
hermes_config/: system_prompt.md
hermes_tools/: __init__.py  ib_executor_tool.py  telegram_tool.py  tradingagents_tool.py
mcp_server/: __init__.py  tradingagents_mcp_server.py
memory/: trading_memory.db  trading_memory.md.bak
mt5/: README.md  TradingAgentsEA.mq5
notes/: fine_tuning_strategy.md
ops/: backup.sh
portfolio_advisor/: aggregator.py  broker.py  compat_test.py  config.py  main.py  runner.py  scheduler.py  screener.py  web.py
scripts/: build_reports_site.py  calibration_report.py  export_calibration_dataset.py  export_mt5_signal_levels_only.py  f3_exit_gate.py  f4_exit_gate.py  fit_trade_filter.py  guard-server-restart.sh  migrate_schema.py  oauth_smoke.py  post_deploy_validate.ps1  prune_report_headings.py  reassemble_complete_reports.py  register_tools.py  run_backtest.py  run_backtest_with_log.sh  run_bot_listener.sh  run_one.py  run_portfolio.py  run_postmortem.py  run_scheduler.sh  run_top_tickers.sh  run_tunnel.sh  run_webui.sh  smoke_structured_output.py  vault_local_bootstrap.ps1
tests/: conftest.py  scenario_fakes.py  test_agent_polish.py  test_agent_utils.py  test_agentkey_social.py  test_alpha_vantage_request.py  test_analyst_execution.py  test_analyst_prompt_stability.py  test_analyst_tool_fallback.py  test_analyst_weights_and_disagreement.py  test_anthropic_cache_control.py  test_anthropic_effort.py  test_anthropic_temperature.py  test_api_dependencies.py  test_api_key_env.py  test_api_ui_smoke_post_deploy.py  test_audit_ledger.py  test_audit_schemas.py  test_backtest_engine.py  test_backtest_schedule.py  test_bedrock_client.py  test_bedrock_provider.py  test_canslim_modules.py  test_capabilities.py  test_checkpoint_archive.py  test_checkpoint_resume.py  test_claude_code_client.py  test_cli_env_loading.py  test_cli_message_content.py  test_cli_report_saving.py  test_cli_run_analysis.py  test_codex_client.py  test_conditional_logic.py  test_crypto_asset_mode.py  test_custom_provider.py  test_data_snapshots.py  test_dataflows_config.py  test_date_boundaries.py  test_db_session.py  test_debate_prompt_stability.py  (+96 more)
tradingagents/: __init__.py  default_config.py  reporting.py
tradingagents_service/: evaluations.py  precedents.py  provenance.py  quality.py  recommendation_contract.py  reporting.py  ticker_validation.py  trace.py
vault-config/: vault.hcl
vault-local/: README.md  docker-compose.yml
web/: app.py
(+1723 files in other folders)
