[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.4"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.0",
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langchain-aws>=0.2.14",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "jinja2>=3.1.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "textual>=0.80",
    "fastapi>=0.115.0",
    "greenlet>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.63",
    # portfolio-advisor dependencies
    "apscheduler>=3.10.0",
    "flask>=3.0.0",
    "pandas-market-calendars>=4.4.0",
    "robin-stocks>=3.0.0",
    "pypdf>=4.0,<6",
]

[project.optional-dependencies]
news = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "pydantic>=2.0.0",
    "googlenewsdecoder>=0.1.3",
]

[project.scripts]
tradingagents = "cli.main:app"
portfolio-advisor = "portfolio_advisor.main:main"
tradingagents-api = "tradingagents_service.api.app:main"
tradingagents-worker = "tradingagents_service.worker.main:main"

[tool.setuptools.packages.find]
include = ["tradingagents*", "tradingagents_service*", "cli*", "portfolio_advisor*", "automation*"]

[tool.setuptools.package-data]
cli = ["static/*", "*.tcss"]
tradingagents = ["prompts/*.yaml"]
automation = ["*.json.example", "*.ps1", "README.md"]
tradingagents_service = ["api/static/*", "api/templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
