[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.3.0"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "alembic>=1.16.0",
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langchain-aws>=0.2.14",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "jinja2>=3.1.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.33.0",
    "rich>=14.0.0",
    "textual>=0.80",
    "fastapi>=0.115.0",
    "greenlet>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "sqlite-vec>=0.1.6",
    "stockstats>=0.6.5",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "truststore>=0.10.0",
    "typing-extensions>=4.14.0",
    "uvicorn>=0.35.0",
    "yfinance>=1.4.1",
    "mcp>=1.9.0",
    # tabulate is required by pandas.DataFrame.to_markdown — used by the
    # yfinance options vendor in tradingagents/dataflows/yfinance_options.py.
    "tabulate>=0.9",
    # pypdf is used by the user-research PDF ingestion path (lazy import).
    "pypdf>=4.0,<6",
]

[project.optional-dependencies]
news = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "pydantic>=2.0.0",
    "googlenewsdecoder>=0.1.3",
]
# Amazon Bedrock support (AWS SigV4 auth + boto3). Optional so the core install
# stays lean: pip install "tradingagents[bedrock]".
bedrock = [
    "langchain-aws>=1.5.0",
]
# Optional vendors enabled via IIC-FORGE-02. Install with:
#   pip install -e .[polygon,futu,osint]
# Each vendor's module raises DataVendorError on missing creds/deps so the
# default install still runs end-to-end with yfinance alone.
polygon = []  # uses requests (already a core dep); add "polygon-api-client>=1.14.0" if you prefer the official SDK
futu = ["futu-api>=9.0"]
osint = ["telethon>=1.36", "tweepy>=4.14"]
sensing = [
    "telethon>=1.36",                  # F3 telegram adapter (also in osint for F0)
    "tweepy>=4.14",                    # F3 x adapter
    "feedparser>=6.0",                 # F3 rss adapter
    "sentence-transformers>=2.5",      # 384-dim local embedder; matches vec_index schema
]
dev = [
    "fakeredis>=2.20",                 # async-compatible Redis fake for unit tests
    "pytest-asyncio>=0.23",            # async test support (declared with asyncio_mode=auto below)
    "freezegun>=1.4",                  # F4: deterministic time control for cooldown tests
    "ruff>=0.15",                      # linter — also run in CI
    "mypy>=1.10",                      # type checker
    "pytest>=8.0",
    "pytest-subtests>=0.13",
]
portfolio = [
    "apscheduler>=3.10.0",
    "flask>=3.0.0",
    "pandas-market-calendars>=4.4.0",
    "robin-stocks>=3.0.0",
]
dashboard = [
    "dash>=2.18.0",
    "plotly>=5.24.0",
    "scipy>=1.14.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.scripts]
tradingagents = "cli.main:app"
portfolio-advisor = "portfolio_advisor.main:main"  # requires: pip install -e ".[portfolio]"
tradingagents-api = "tradingagents_service.api.app:main"
tradingagents-worker = "tradingagents_service.worker.main:main"
tradingagents-mcp = "mcp_server.tradingagents_mcp_server:main"

[tool.setuptools.packages.find]
include = ["tradingagents*", "tradingagents_service*", "cli*", "portfolio_advisor*", "automation*", "mcp_server*", "back_test*"]

[tool.setuptools.package-data]
cli = ["static/*", "*.tcss"]
# T1.4 — versioned prompt templates ship as data files alongside the
# code that loads them via PromptRegistry.  Without this, ``pip install``
# would drop the .txt files and every agent would fail at first render.
tradingagents = ["prompts/*.yaml", "prompts/**/*.txt"]
automation = ["*.json.example", "*.ps1", "README.md"]
tradingagents_service = ["api/static/*", "api/templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["results", "worklog"]
# Restrict linting to library code we own. Root-level deployment scripts
# (webui.py, worker.py, auth.py, etc.) have many pre-existing violations
# and are not part of the installable library surface.
include = [
    "tradingagents/**/*.py",
    "cli/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
# Combine both HEAD and upstream checks (E, W, F, I, N, B, UP, C4, SIM)
select = ["E", "W", "F", "I", "N", "B", "UP", "C4", "SIM"]
ignore = [
    "E501",   # line too long — enforced by formatter, not linter
    "N806",   # variable in function should be lowercase (conflicts with pandas df.Column patterns)
    "SIM108", # ternary operator — sometimes less readable
    "E402",   # module-level import not at top — common in lazy-import patterns
    "SIM105", # contextlib.suppress — try/except/pass is sometimes clearer
    "SIM102", # nested if — sometimes more readable than combined form
    "SIM117", # nested with — sometimes clearer
    "E701",   # multiple statements on one line (colon) — pre-existing style
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]   # intentional re-exports
# Test method names that include class names are intentionally descriptive.
# E702: inline semicolons used for compact mock setup in test files.
"tests/**" = ["N802", "E702", "E741"]
# y_finance.py uses YFin in function names matching upstream API naming.
"tradingagents/dataflows/y_finance.py" = ["N802"]
# parallel_setup.py: ruff can't resolve re-exports through __init__.py chains.
"tradingagents/graph/parallel_setup.py" = ["F821"]
# cli/tui.py: AnalystWallTimeTracker imported via TYPE_CHECKING block.
"cli/tui.py" = ["F821"]
# sensing adapters: pd used via lazy import; N8xx/E741/E702 are pre-existing style.
"tradingagents/sensing/**" = ["F821", "N805", "N818", "E741", "E702"]
"tradingagents/llm_clients/**" = ["N818"]
"tradingagents/graph/cost_callback.py" = ["N818"]
"tradingagents/dataflows/range_stats.py" = ["N818"]
"tradingagents/dataflows/technicals_deep.py" = ["F821"]
"tradingagents/agents/utils/structure_patterns.py" = ["F821", "E741"]
# test_reddit_fallback uses self_inner to avoid shadowing outer self in nested class
"tests/test_reddit_fallback.py" = ["N802", "N805"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
